# ddb

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: prerelease.yml  release.yml
src/: error.rs  lib.rs  main.rs  single.rs  threaded.rs  utils.rs
tests/: common.rs  mutlithreaded.rs  singlethreaded.rs
