[package]
name = "ddb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = { version = "0.17.1" }
clap = { version =  "4.0.13", features = []}
static_assertions = "1.1.0"

[dev-dependencies]
rand="0.8.5"